# SearchEvery

./: .gitignore  README.md  build.bat  build.sh  index.html  package-lock.json  package.json  run.bat  run.sh  vite.config.ts
config/: config.example.json
doc/: 产品UI-UE设计.md  产品需求说明.md  原型开发计划.md  技术实现方案.md  接口定义.md  资源目录说明.md  默认配置模板.md
scripts/: generate-icons.mjs  resize-ico-from-256.mjs
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/indexes/main/: meta.json  scan_state.json
src-tauri/src/: config.rs  dedup.rs  diagnostics.rs  indexer.rs  main.rs  pipeline.rs  pipeline_state.rs  scanner.rs  search.rs
src/components/: ThemeDropdown.tsx
src/constants/: runtime.ts  themes.ts  ui.ts
src/hooks/: useFocusDebug.ts  useGlobalErrorLogging.ts  useSearchHotkeys.ts  useTauriEvents.ts
src/pages/: AboutPage.tsx
src/services/: api.ts  events.ts  logging.ts
src/utils/: date.ts  env.ts  highlight.tsx  path.ts  size.ts  string.ts
