[package]
name = "search-everywhere-tauri"
version = "0.1.0"
edition = "2021"



[dependencies]
tauri = { version = "1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
tantivy = "0.22"
jieba-rs = "0.6"
chrono = { version = "0.4", features = ["clock"] }
parking_lot = "0.12"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
tracing-log = "0.1"
once_cell = "1"

[build-dependencies]
tauri-build = { version = "1", features = [] }

# workaround: fix zstd-safe/zstd-sys symbol mismatch during build on Windows

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
